--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^16.2.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-hot-toast": "^2.5.1",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
